[workspace]
members = ["bbs_revocation"]

[package]
name = "bbs-revocation-demo"
version = "0.1.0"
authors = ["Andrew Whitehead <cywolf@gmail.com>"]
edition = "2018"

[dependencies]
bbs = "0.4"
bbs-revocation = { path = "./bbs_revocation" }
clap = "2.33"
rand = "0.7"

[profile.release]
lto = true
codegen-units = 1
